--- a/package.json
+++ b/package.json
@@ -29,22 +29,8 @@
     "prepare": "",
     "docker:redis": "docker run -d -p 6379:6379 --name redis-auth redis:alpine",
     "env:generate-secrets": "node -e \"console.log('JWT_SECRET=' + require('crypto').randomBytes(64).toString('hex')); console.log('JWT_REFRESH_SECRET=' + require('crypto').randomBytes(64).toString('hex'));\"",
-    "env:validate": "node -e \"require('./dist/config/env.validation').validate(process.env); console.log('✅ Environment validation passed');\"",
-    "docker:dev": "docker-compose up --build -d",
-    "docker:simple": "docker-compose -f docker-compose.simple.yml up --build -d",
-    "docker:simple-stop": "docker-compose -f docker-compose.simple.yml down",
-    "docker:prod": "docker-compose -f docker-compose.prod.yml up --build -d",
-    "docker:production": "docker-compose -f docker-compose.production.yml up --build -d",
-    "docker:local": "docker-compose -f docker-compose.local.yml up --build -d",
-    "docker:logs": "docker-compose logs -f",
-    "docker:stop": "docker-compose down",
-    "render:build": "npm ci && npm run build",
-    "render:start": "npm run prisma:generate && npm run start:prod",
-    "local:start": "powershell -ExecutionPolicy Bypass -File local-server.ps1 -Action start",
-    "local:stop": "powershell -ExecutionPolicy Bypass -File local-server.ps1 -Action stop",
-    "local:restart": "powershell -ExecutionPolicy Bypass -File local-server.ps1 -Action restart",
-    "local:logs": "powershell -ExecutionPolicy Bypass -File local-server.ps1 -Action logs",
-    "local:status": "powershell -ExecutionPolicy Bypass -File local-server.ps1 -Action status"
+    "env:validate": "node -e \"require('./dist/config/env.validation').validate(process.env); console.log('✅ Environment validation passed');\""
+   
   },
   "dependencies": {
     "@nestjs/bull": "^11.0.3",
